<resources>
    <string name="app_name">EcoEnergy</string>
    <string name="ecoenergy">EcoEnergy</string>
    <string name="formulario">Formulario</string>
    <string name="nombre">Nombre</string>
    <string name="direcci_n">Dirección</string>
    <string name="tel_fono">Teléfono</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="casa">Casa</string>
    <string name="apartamento">Apartamento</string>
    <string name="granja">Granja</string>
    <string name="aerogeneradores">Aerogeneradores</string>
    <string name="paneles_solares">Paneles solares</string>
    <string name="otros_sistemas_de_energia_renovable">Otros sistemas de energia renovable</string>
    <string name="enviar_solicitud">Enviar solicitud</string>
    <string name="un_mundo_mejor">UN MUNDO MEJOR</string>
</resources>