<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        style="@style/texto"
        android:background="@color/black"
        android:text="@string/ecoenergy"
        android:textSize="52sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formulario"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_on_secondary"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/nombre"/>
        <EditText
            android:id="@+id/editTextDireccion"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/direcci_n"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/tel_fono"
            android:inputType="phone"/>
            <EditText
                android:id="@+id/textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/correo_electr_nico"
                android:inputType="textEmailAddress"/>
        <RadioGroup
            android:id="@+id/radioGroupHometype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/casa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/casa"/>
            <RadioButton
                android:id="@+id/apartamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apartamento"/>
            <RadioButton
                android:id="@+id/granja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/granja"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/aerogeneradores"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/paneles_solares"/>

        </LinearLayout>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otros_sistemas_de_energia_renovable"/>
        <Button
            style="@style/EstiloBtn"
            android:id="@+id/enviar_solicitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar_solicitud"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/un_mundo_mejor"
            android:textAlignment="center"
            android:textSize="42sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>